# serializer version: 1
# name: test_migrate_process_sensor[after_migration]
  list([
    ConfigEntrySnapshot({
      'data': dict({
      }),
      'disabled_by': None,
      'domain': 'systemmonitor',
      'entry_id': <ANY>,
      'minor_version': 2,
      'options': dict({
        'binary_sensor': dict({
          'process': list([
            'python3',
            'pip',
          ]),
        }),
        'resources': list([
          'disk_use_percent_/',
          'disk_use_percent_/home/notexist/',
          'memory_free_',
          'network_out_eth0',
          'process_python3',
        ]),
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'title': 'System Monitor',
      'unique_id': None,
      'version': 1,
    }),
  ])
# ---
# name: test_migrate_process_sensor[before_migration]
  list([
    ConfigEntrySnapshot({
      'data': dict({
      }),
      'disabled_by': None,
      'domain': 'systemmonitor',
      'entry_id': <ANY>,
      'minor_version': 2,
      'options': dict({
        'binary_sensor': dict({
          'process': list([
            'python3',
            'pip',
          ]),
        }),
        'resources': list([
          'disk_use_percent_/',
          'disk_use_percent_/home/notexist/',
          'memory_free_',
          'network_out_eth0',
          'process_python3',
        ]),
        'sensor': dict({
          'process': list([
            'python3',
            'pip',
          ]),
        }),
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'title': 'System Monitor',
      'unique_id': None,
      'version': 1,
    }),
  ])
# ---
# name: test_migrate_process_sensor[entities_before_migration]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.system_monitor_process_python3',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
      'original_icon': 'mdi:cpu-64-bit',
      'original_name': 'Process python3',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'process',
      'unique_id': 'binary_process_python3',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.system_monitor_process_pip',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
      'original_icon': 'mdi:cpu-64-bit',
      'original_name': 'Process pip',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'process',
      'unique_id': 'binary_process_pip',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_disk_free',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
      'original_icon': 'mdi:harddisk',
      'original_name': 'Disk free /',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'disk_free',
      'unique_id': 'disk_free',
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_disk_free_media_share',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
      'original_icon': 'mdi:harddisk',
      'original_name': 'Disk free /media/share',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'disk_free',
      'unique_id': 'disk_free_media_share',
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_disk_use',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
      'original_icon': 'mdi:harddisk',
      'original_name': 'Disk use /',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'disk_use',
      'unique_id': 'disk_use',
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_disk_use_media_share',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
      'original_icon': 'mdi:harddisk',
      'original_name': 'Disk use /media/share',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'disk_use',
      'unique_id': 'disk_use_media_share',
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_disk_usage',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': 'mdi:harddisk',
      'original_name': 'Disk usage /',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'disk_use_percent',
      'unique_id': 'disk_use_percent',
      'unit_of_measurement': '%',
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_disk_usage_media_share',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': 'mdi:harddisk',
      'original_name': 'Disk usage /media/share',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'disk_use_percent',
      'unique_id': 'disk_use_percent_media_share',
      'unit_of_measurement': '%',
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_ipv4_address_eth1',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': 'mdi:ip-network',
      'original_name': 'IPv4 address eth1',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'ipv4_address',
      'unique_id': 'ipv4_address_eth1',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_ipv4_address_eth0',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': 'mdi:ip-network',
      'original_name': 'IPv4 address eth0',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'ipv4_address',
      'unique_id': 'ipv4_address_eth0',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_ipv6_address_eth1',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': 'mdi:ip-network',
      'original_name': 'IPv6 address eth1',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'ipv6_address',
      'unique_id': 'ipv6_address_eth1',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_ipv6_address_eth0',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': 'mdi:ip-network',
      'original_name': 'IPv6 address eth0',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'ipv6_address',
      'unique_id': 'ipv6_address_eth0',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_last_boot',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
      'original_icon': None,
      'original_name': 'Last boot',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'last_boot',
      'unique_id': 'last_boot',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_load_15m',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': 'mdi:cpu-64-bit',
      'original_name': 'Load (15m)',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'load_15m',
      'unique_id': 'load_15m',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_load_1m',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': 'mdi:cpu-64-bit',
      'original_name': 'Load (1m)',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'load_1m',
      'unique_id': 'load_1m',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_load_5m',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': 'mdi:cpu-64-bit',
      'original_name': 'Load (5m)',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'load_5m',
      'unique_id': 'load_5m',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_memory_free',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
      'original_icon': 'mdi:memory',
      'original_name': 'Memory free',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'memory_free',
      'unique_id': 'memory_free',
      'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_memory_use',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
      'original_icon': 'mdi:memory',
      'original_name': 'Memory use',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'memory_use',
      'unique_id': 'memory_use',
      'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_memory_usage',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': 'mdi:memory',
      'original_name': 'Memory usage',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'memory_use_percent',
      'unique_id': 'memory_use_percent',
      'unit_of_measurement': '%',
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_network_in_eth1',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
      'original_icon': 'mdi:server-network',
      'original_name': 'Network in eth1',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'network_in',
      'unique_id': 'network_in_eth1',
      'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_network_in_eth0',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
      'original_icon': 'mdi:server-network',
      'original_name': 'Network in eth0',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'network_in',
      'unique_id': 'network_in_eth0',
      'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_network_out_eth1',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
      'original_icon': 'mdi:server-network',
      'original_name': 'Network out eth1',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'network_out',
      'unique_id': 'network_out_eth1',
      'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_network_out_eth0',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
      'original_icon': 'mdi:server-network',
      'original_name': 'Network out eth0',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'network_out',
      'unique_id': 'network_out_eth0',
      'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_packets_in_eth1',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': 'mdi:server-network',
      'original_name': 'Packets in eth1',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'packets_in',
      'unique_id': 'packets_in_eth1',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_packets_in_eth0',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': 'mdi:server-network',
      'original_name': 'Packets in eth0',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'packets_in',
      'unique_id': 'packets_in_eth0',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_packets_out_eth1',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': 'mdi:server-network',
      'original_name': 'Packets out eth1',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'packets_out',
      'unique_id': 'packets_out_eth1',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_packets_out_eth0',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': 'mdi:server-network',
      'original_name': 'Packets out eth0',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'packets_out',
      'unique_id': 'packets_out_eth0',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_network_throughput_in_eth1',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.DATA_RATE: 'data_rate'>,
      'original_icon': None,
      'original_name': 'Network throughput in eth1',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'throughput_network_in',
      'unique_id': 'throughput_network_in_eth1',
      'unit_of_measurement': <UnitOfDataRate.MEGABYTES_PER_SECOND: 'MB/s'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_network_throughput_in_eth0',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.DATA_RATE: 'data_rate'>,
      'original_icon': None,
      'original_name': 'Network throughput in eth0',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'throughput_network_in',
      'unique_id': 'throughput_network_in_eth0',
      'unit_of_measurement': <UnitOfDataRate.MEGABYTES_PER_SECOND: 'MB/s'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_network_throughput_out_eth1',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.DATA_RATE: 'data_rate'>,
      'original_icon': None,
      'original_name': 'Network throughput out eth1',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'throughput_network_out',
      'unique_id': 'throughput_network_out_eth1',
      'unit_of_measurement': <UnitOfDataRate.MEGABYTES_PER_SECOND: 'MB/s'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_network_throughput_out_eth0',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.DATA_RATE: 'data_rate'>,
      'original_icon': None,
      'original_name': 'Network throughput out eth0',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'throughput_network_out',
      'unique_id': 'throughput_network_out_eth0',
      'unit_of_measurement': <UnitOfDataRate.MEGABYTES_PER_SECOND: 'MB/s'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_processor_use',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': 'mdi:cpu-64-bit',
      'original_name': 'Processor use',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'processor_use',
      'unique_id': 'processor_use',
      'unit_of_measurement': '%',
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_processor_temperature',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
      'original_icon': None,
      'original_name': 'Processor temperature',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'processor_temperature',
      'unique_id': 'processor_temperature',
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_swap_free',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
      'original_icon': 'mdi:harddisk',
      'original_name': 'Swap free',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'swap_free',
      'unique_id': 'swap_free',
      'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_swap_use',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
      'original_icon': 'mdi:harddisk',
      'original_name': 'Swap use',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'swap_use',
      'unique_id': 'swap_use',
      'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_swap_usage',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': 'mdi:harddisk',
      'original_name': 'Swap usage',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'swap_use_percent',
      'unique_id': 'swap_use_percent',
      'unit_of_measurement': '%',
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.system_monitor_disk_usage_home_notexist',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': 'mdi:harddisk',
      'original_name': 'Disk usage /home/notexist/',
      'platform': 'systemmonitor',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'disk_use_percent',
      'unique_id': 'disk_use_percent_home_notexist',
      'unit_of_measurement': '%',
    }),
  ])
# ---
